# Ghidra_DecompSemanticUpdater

./: .gitignore  README.md  cerebras_suggestions.py  coreFunctions.py  debug_types.py  decompile_binary.py  findMain.py  pyproject.toml  requirements.txt  update_semantics.py
decompiled_files/: crackme0x06_decompiled.c
ghidra_decompiler/: __init__.py  alignment.py  builtin_suggestions.py  code_utils.py  core_functions.py  custom_types.py  find_main.py  pipeline.py  platform_utils.py  semantics.py  syntax.py  type_utils.py
ghidra_decompiler/ai/: __init__.py  cerebras.py  openrouter.py
ghidra_decompiler/gui_utils/: __init__.py  optimizer.py
ghidra_projects/: ui.py
ghidra_projects/hello.rep/: project.prp  projectState
ghidra_scripts/: ApplyAIPipeline.py
scripts/: GhidraAIPipeline.py  decompile_binary.py
